Fix discrepancy in gap utility-class names.

--- a/Sources/Raptor/Resources/css/raptor-core/raptor-core-utilities.css
+++ b/Sources/Raptor/Resources/css/raptor-core/raptor-core-utilities.css
@@ -213,12 +213,12 @@
 .object-fit-none { object-fit: none; }
 
 /* GAP (both axes) */
-.g-0 { gap: 0; }
-.g-1 { gap: 0.25rem; }
-.g-2 { gap: 0.5rem; }
-.g-3 { gap: 1rem; }
-.g-4 { gap: 1.5rem; }
-.g-5 { gap: 3rem; }
+.gap-0 { gap: 0; }
+.gap-1 { gap: 0.25rem; }
+.gap-2 { gap: 0.5rem; }
+.gap-3 { gap: 1rem; }
+.gap-4 { gap: 1.5rem; }
+.gap-5 { gap: 3rem; }
 
 .w-100 {
     width: 100%;
